IC-Test/objects/xtma_Individual_Email_Result__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Contact__r.AccountId</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>Individual_Email_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVySEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Bounced__c</fullName>
        <label>Date Bounced</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Sent__c</fullName>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Unsubscribed__c</fullName>
        <label>Date Unsubscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailResultSummaryOutdated__c</fullName>
        <formula>IF( OR( ISNULL( EmailResultSummary__c ), EmailResultSummary__c = &quot;&quot;, LastModifiedDate &gt;= EmailResultSummary__r.LastModifiedDate ), &quot;True&quot;, &quot;False&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Result Summary Outdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailResultSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Result Summary</label>
        <referenceTo>EmailResultSummary__c</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>IndividualEmailResults</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Address__c</fullName>
        <label>From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Name__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Individual Email Results</relationshipLabel>
        <relationshipName>R00N30000001fVygEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LinkToAccount__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + AccountId__c,    Contact__r.Account.Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Clicks__c</fullName>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Unique_Clicks__c</fullName>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Individual Email Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>EmailResultSummaryOutdated__c</columns>
        <columns>NAME</columns>
        <columns>Date_Time_Sent__c</columns>
        <columns>Opened__c</columns>
        <columns>Date_Bounced__c</columns>
        <columns>Date_Unsubscribed__c</columns>
        <columns>From_Address__c</columns>
        <columns>Contact__c</columns>
        <columns>AccountId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LinkToAccount__c</columns>
        <columns>Subject_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EmailPQ</fullName>
        <columns>NAME</columns>
        <columns>Subject_Line__c</columns>
        <columns>Contact__c</columns>
        <columns>LinkToAccount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Date_Time_Sent__c</columns>
        <columns>Opened__c</columns>
        <columns>Date_Bounced__c</columns>
        <columns>Date_Unsubscribed__c</columns>
        <columns>EmailResultSummaryOutdated__c</columns>
        <columns>EmailResultSummary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Email Product Quotes</value>
        </filters>
        <label>Email Product Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MissingInfo</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Subject_Line__c</columns>
        <columns>Contact__c</columns>
        <columns>LinkToAccount__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Time_Sent__c</columns>
        <columns>Opened__c</columns>
        <columns>Date_Bounced__c</columns>
        <columns>Date_Unsubscribed__c</columns>
        <columns>EmailResultSummary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LinkToAccount__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>product quote</value>
        </filters>
        <label>IERs Missing Contct or Acct (not quotes)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ReadyForAggregation</fullName>
        <columns>NAME</columns>
        <columns>Subject_Line__c</columns>
        <columns>Contact__c</columns>
        <columns>LinkToAccount__c</columns>
        <columns>EmailResultSummary__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Time_Sent__c</columns>
        <columns>Opened__c</columns>
        <columns>Date_Bounced__c</columns>
        <columns>Date_Unsubscribed__c</columns>
        <columns>EmailResultSummaryOutdated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmailResultSummaryOutdated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>Ready for Aggregation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TestEmailPQ</fullName>
        <columns>NAME</columns>
        <columns>Subject_Line__c</columns>
        <columns>Contact__c</columns>
        <columns>LinkToAccount__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Date_Time_Sent__c</columns>
        <columns>Opened__c</columns>
        <columns>Date_Bounced__c</columns>
        <columns>Date_Unsubscribed__c</columns>
        <columns>EmailResultSummaryOutdated__c</columns>
        <columns>EmailResultSummary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>TEST Email Product Quotes</value>
        </filters>
        <label>Test Email Product Quotes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>